--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Myles Megyesi",
   "devDependencies": {
     "@types/chai": "^4.0.5",
+    "@types/lodash.isequal": "^4.5.2",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "chai": "^4.1.2",
+    "lodash.isequal": "^4.5.0",
     "mocha": "^4.0.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
