--- a/package.json
+++ b/package.json
@@ -7,21 +7,16 @@
   "devDependencies": {
     "@types/chai": "^4.0.5",
     "@types/lodash.isequal": "^4.5.2",
-    "@types/lodash.isplainobject": "^4.0.3",
-    "@types/lodash.isstring": "^4.0.3",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "@types/sinon": "^4.0.0",
     "chai": "^4.1.2",
+    "lodash.isequal": "^4.5.0",
     "mocha": "^4.0.1",
     "sinon": "^4.1.2",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
   },
-  "dependencies": {
-    "lodash.isequal": "^4.5.0",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isstring": "^4.0.1"
-  }
+  "dependencies": {}
 }
