--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "author": "Myles Megyesi",
   "devDependencies": {
     "@types/chai": "^4.0.5",
+    "@types/lodash.isboolean": "^3.0.3",
     "@types/lodash.isequal": "^4.5.2",
+    "@types/lodash.isnull": "^3.0.3",
+    "@types/lodash.isnumber": "^3.0.3",
+    "@types/lodash.isplainobject": "^4.0.3",
+    "@types/lodash.isstring": "^4.0.3",
+    "@types/lodash.isundefined": "^3.0.3",
+    "@types/lodash.tostring": "^4.1.3",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "@types/sinon": "^4.0.0",
@@ -18,5 +25,13 @@
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isnull": "^3.0.0",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.tostring": "^4.1.4"
+  }
 }
