--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "Matchers",
   "license": "MIT",
   "author": "Myles Megyesi",
+  "dependencies": {
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isequal": "^4.5.0",
+    "lodash.isnull": "^3.0.0",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.tostring": "^4.1.4"
+  },
   "devDependencies": {
     "@types/lodash.isboolean": "^3.0.3",
     "@types/lodash.isequal": "^4.5.2",
@@ -16,18 +26,12 @@
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "mocha": "^4.0.1",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.7.2"
+    "source-map-support": "^0.5.5",
+    "tslib": "1.9.0",
+    "tslint": "5.10.0",
+    "typescript": "2.8.3"
   },
-  "dependencies": {
-    "lodash.isboolean": "^3.0.3",
-    "lodash.isequal": "^4.5.0",
-    "lodash.isnull": "^3.0.0",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isstring": "^4.0.1",
-    "lodash.isundefined": "^3.0.1",
-    "lodash.tostring": "^4.1.4"
+  "peerDependencies": {
+    "tslib": "^1.9.0"
   }
 }
